[package]
name = "chaintools"
version = "0.1.0"
authors = ["alejandrogzi <alejandrxgzi@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Serialize and work with .chain files in Rust"
homepage = "https://github.com/alejandrogzi/chaintools"
repository = "https://github.com/alejandrogzi/chaintools"
readme = "README.md"
keywords = ["chain", "lib", "genomic", "tool"]

[dependencies]
rayon = { version = "1.10", optional = true }
fxhash = { version = "0.2", optional = true }
memchr = { version = "2.7", optional = true }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
flate2 = "1.0"
cubiculum = "0.1.4"

[profile.release]
lto = true

[features]
default = ["read"]
read = ["rayon", "fxhash", "memchr"]
